feat: add password protection to comments
